# advent

./: pyproject.toml
2024/: pyproject.toml
2024/day1/: main.py
2024/day10/: main.py
2024/day11/: main.py
2024/day12/: main.py
2024/day13/: main.py
2024/day14/: main.py
2024/day2/: main.py
2024/day3/: main.py
2024/day4/: main.py
2024/day9/: main.py
solutions/: day1.py  day2.py  day3.py  day4.py
