[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Antoine Gaston <antoine@epigenelabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
